# LowLatencyInput

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/luoxiaohei/lowlatencyinput/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/bridge/: jni_bridge.cpp  jni_bridge.h
app/src/main/cpp/input/: input_reader.cpp  input_reader.h  input_reader_jni_utils.cpp  input_reader_jni_utils.h  input_reader_loop.cpp  input_reader_loop.h  input_reader_permissions.cpp  input_reader_permissions.h
app/src/main/java/com/luoxiaohei/lowlatencyinput/: Constants.kt  MainApplication.kt
app/src/main/res/drawable/: bg_icon_bullet.xml  bg_icon_crosshair.xml  bg_icon_crouch.xml  bg_icon_editor_close.xml  bg_icon_grenade.xml  bg_icon_joystick_ring.xml  bg_icon_jump.xml  bg_icon_jumpad.xml  bg_icon_rifle.xml  bg_icon_turret.xml  ic_add.xml  ic_close.xml  ic_close_small.xml  ic_delete.xml  ic_placeholder.xml  ic_save.xml  ic_visibility.xml  ic_visibility_off.xml  overlay_button_background.xml  overlay_widget_background.xml
app/src/main/res/layout/: activity_main.xml  activity_overlay_editor.xml  fragment_add_element_bottom_sheet.xml  list_item_available_element.xml  overlay_layout.xml
app/src/main/res/menu/: overlay_editor_menu.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: styles.xml  themes.xml
app/src/test/java/com/luoxiaohei/lowlatencyinput/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+16 files in other folders)
